--- a/basic/package.json
+++ b/basic/package.json
@@ -20,19 +20,29 @@
   },
   "homepage": "https://github.com/spring-guides/tut-react-and-spring-data-rest",
   "dependencies": {
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "rest": "^1.3.1",
-    "webpack": "^1.12.2"
+    "rest": "^1.3.2"
   },
   "scripts": {
-    "watch": "webpack --watch -d"
+    "watch": "webpack --watch -d",
+    "build": "webpack",
+    "blog": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
+    "webpack": "webpack",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --inline --content-base build"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.9",
+    "html-webpack-plugin": "^2.30.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "style-loader": "^0.20.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^5.6.0",
+    "webpack-dev-server": "^5.6.0"
   }
 }
